fakevideosink: should not install properties at instance init
This forces us to instantiate the object before looking up its properties as part of !3026 (merged) , and is quite ugly
This forces us to instantiate the object before looking up its properties as part of !3026 (merged) , and is quite ugly